@@ -1,13 +1,13 @@
 <!--
   Copyright © 2009      CNRS
-  Copyright © 2009-2019 Inria.  All rights reserved.
+  Copyright © 2009-2020 Inria.  All rights reserved.
   Copyright © 2009-2011 Université Bordeaux.
   See COPYING in top-level directory.
 
   This is the DTD for hwloc v2.x XMLs.
  -->
 
-<!ELEMENT topology (object+,distances2*,distances2hetero*)>
+<!ELEMENT topology (object+,distances2*,distances2hetero*,support*)>
 <!ATTLIST topology version CDATA "">
 
 <!ELEMENT object (page_type*,info*,userdata*,object*)>
@@ -67,3 +67,7 @@
 <!ATTLIST userdata name CDATA "" >
 <!ATTLIST userdata length CDATA "0" >
 <!ATTLIST userdata encoding CDATA "" >
+
+<!ELEMENT support EMPTY>
+<!ATTLIST support name CDATA #REQUIRED>
+<!ATTLIST support value CDATA "1" >
