@@ -20,6 +20,9 @@ bug fixes (and other actions) for each version of hwloc since version
 
 Version 2.3.0
 -------------
+* API
+  + The new topology flag HWLOC_TOPOLOGY_FLAG_IMPORT_SUPPORT causes
+    support arrays to be loaded from XML exported with hwloc 2.3+.
 * Backends
   + Add a ROCm SMI backend and a hwloc/rsmi.h helper file for getting
     the locality of AMD GPUs, now exposed as "rsmi" OS devices.
